fix: Deletion dialog flickering on screen resize and too big paddings (#4539)
* fix: deletion dialog flickering on screen resize

* fix: modules delete box lacking custom texts

* fix: delete box in extensions

* fix: OAuthClient delete box text

* fix: paddings in bigger deletebox in modules

* fix: change cancelFn param to optional

--- a/src/styles/wizard-dialog.scss
+++ b/src/styles/wizard-dialog.scss
@@ -1,3 +1,6 @@
 ui5-dialog::part(content) {
-  padding: 1em !important;
+  padding-left: 0.5rem !important;
+  padding-right: 0.5rem !important;
+  padding-bottom: 1rem !important;
+  padding-top: 1rem !important;
 }
